Finish the blog post implementation

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,24 @@
-<h1 class="title">Hello ruby</h1>
+<%= content_for :page_title, 'Homepage' %>
+<div class="section">
+  <div class="container">
+    <% @posts.each_with_index do |post| %>
+      <div class="card mb-4">
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <p class="title is-4">
+                <%= link_to post.title, post %>
+              </p>
+            </div>
+          </div>
+          <div class="content">
+            <%= post.content %>
+          </div>
+          <%# <div class="comment-count">
+            <span class="tag is-rounded"></span>
+          </div> %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
