--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :page_title, @post.title %>
-<div class="section">
+<section class="section">
   <div class="container">
     <nav class="level">
       <div class="level-left">
@@ -12,7 +12,7 @@
           <%= link_to 'Edit', edit_post_path(@post), class: 'button' %>
         </p>
         <p class="level-item">
-          <%= link_to 'Delete', post_path(@post), method: :delete, class: 'button is-danger' %>
+          <%= link_to "Delete", @post, data: { 'turbo-method': :delete, 'turbo-confirm': 'Are you sure?'} , class: 'button is-danger' %>
         </p>
       </div>
     </nav>
@@ -21,4 +21,17 @@
       <%= @post.content %>
     </div>
   </div>
-</div>
+</section>
+<section class="section comments">
+  <div class="container">
+    <h2 class="subtitle is-5"><strong> <%= @post.comments.count %> </strong> Comments </h2>
+    <%= render @post.comments %>
+    <div class="comment-form">
+      <hr />
+      <h3 class="subtitle is-3">
+        Leave a reply
+      </h3>
+      <%= render 'comments/form' %>
+    </div>
+  </div>
+</section>
